samples/_failures_safe/1761709160_028bd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e47c230d.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_e47c230d.c:160:9: error: expected ‘:’ or ‘...’ at end of input
  160 |         case STATE_COMPLETE
      |         ^~~~
./samples/SAFE/__tmp_e47c230d.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e47c230d.c:160:9: error: expected declaration or statement at end of input
